--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -41,6 +41,8 @@
     "clientThemeVariant": "",
     "withAdminUi": true,
     "enableGradleEnterprise": false,
-    "languages": ["en", "fr"]
+    "languages": ["en", "fr"],
+    "lastLiquibaseTimestamp": 1673087086000,
+    "entities": ["CV"]
   }
 }
